# hackathon-2025

./: README.md
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml  requirements.txt
Backend/app/: __init__.py
Backend/app/controllers/: __init__.py  auth.py  task.py  user.py
Backend/app/exceptions/: base.py
Backend/app/models/: __init__.py  base.py  task.py  token.py  user.py
Backend/app/repository/: __init__.py  task.py  token.py  user.py
Backend/app/schemas/: __init__.py  auth.py  task.py  user.py
Backend/app/services/: __init__.py  auth.py  task.py  user.py
Backend/app/templates/: reset-password.html  reset-password.txt
Backend/app/utils/: decorators.py  email.py  object_storage.py
Backend/migrations/: env.py
Backend/migrations/versions/: 0fd6fb62e2ff_update_task.py  54411b3859a9_create_user_and_token_model.py  9471a73951e8_update_task.py  b9630c5009e3_add_table_task.py  bb49360e08fb_update_user_model.py
Frontend/: .eslintrc.cjs  .prettierrc.cjs  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  index.css  main.jsx
Frontend/src/components/: AddTask.jsx  TaskRow.jsx  UpdateTask.jsx
Frontend/src/constants/: api.js
Frontend/src/layouts/: LayoutSidebar.jsx  MainLayout.jsx
Frontend/src/pages/: About.jsx  Home.jsx  Login.jsx  NotFound.jsx  Product.jsx  SignUp.jsx  index.js
Frontend/src/routers/: Routers.jsx  path.js
Frontend/src/services/: auth.js  task.js  user.js
(+14 files in other folders)
